cambios en las redes sociales de Viajeros

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,13 @@
 // imports //
 @import "navbar";
 @import "areas";
+@import "icons";
 
 // variables //
 
 $bodyBg: rgb(238, 238, 238);
 $headerBg: rgb(245, 198, 170);
-$sponsorsBg: rgb(244, 223, 208);
+$sponsorsBg: #2a9d8f;
 $tituloFontSize: 200%;
 $navFontSize: 17px;
 $small: 575px;
