--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,40 @@ h4 {
 .container {
   margin-bottom: 50px; }
 
+.viajeros--redes {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .viajeros--redes ul li {
+    display: inline-block;
+    margin: 0 5px;
+    width: 50px;
+    height: 50px;
+    text-align: center; }
+    .viajeros--redes ul li a {
+      display: block;
+      padding: 0 5px;
+      background: #2a9d8f;
+      color: white;
+      line-height: 50px;
+      font-size: 18px;
+      box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.2);
+      transition: .2s; }
+  .viajeros--redes ul:hover a {
+    filter: blur(2px); }
+  .viajeros--redes ul li a:hover {
+    transform: translateY(-3px) scale(1.05);
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.4);
+    filter: none; }
+  .viajeros--redes ul li .facebook:hover {
+    background: #3b5999; }
+  .viajeros--redes ul li .instagram:hover {
+    background: #e4405f; }
+  .viajeros--redes ul li .youtube:hover {
+    background: #bd081c; }
+  .viajeros--redes ul li .twitter:hover {
+    background: #55acee; }
+
 .justify {
   text-align: justify; }
 
