--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,7 @@
 // variables //
 
 $bodyBg: rgb(238, 238, 238);
-$headerBg: rgb(245, 198, 170);
+$headerBg: #343a40;
 $sponsorsBg: #2a9d8f;
 $tituloFontSize: 200%;
 $navFontSize: 17px;
