--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,8 @@
   text-transform: capitalize;
   text-align: center;
   background-color: #2a9d8f; }
+  .sponsors--color a {
+    color: black; }
 
 .pd__noticias {
   font-family: 'Source Sans Pro', sans-serif;
