--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,7 +1,7 @@
 // variables //
 
 $bodyBg: rgb(238, 238, 238);
-$headerBg: rgb(245, 198, 170);
+$headerBg: #343a40;;
 $sponsorsBg: #2a9d8f;
 $tituloFontSize: 200%;
 $navFontSize: 17px;
@@ -18,7 +18,6 @@ $navFontSize: 17px;
             text-decoration: none;
 			padding: 10px;
 		}
-	
 		.header__titulo{
 			font-family: 'Bebas Neue';
 	    	font-size: $tituloFontSize;
@@ -26,3 +25,9 @@ $navFontSize: 17px;
 		}
 }
 
+.notifProf{
+	color: white;
+	font-size: 20px;
+	width: 20px;
+	height: 20px
+}
