--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -2,7 +2,6 @@
 
 $bodyBg: rgb(238, 238, 238);
 $headerBg: #343a40;;
-$sponsorsBg: #2a9d8f;
 $tituloFontSize: 200%;
 $navFontSize: 17px;
 
@@ -33,3 +32,5 @@ $navFontSize: 17px;
 	width: 20px;
 	height: 20px
 }
+
+.header--margin{margin-bottom: 20px;}
