--- a/scss/_areas.scss
+++ b/scss/_areas.scss
@@ -1,16 +1,23 @@
 // variables
 $sponsorsBg: #2a9d8f;
+$letraFooter: 'Source Sans Pro';
+$colorFooter: #434343;
+$colorIconosFooter: black;
+$colorFooterBottom: #2a9d8f;
 
 // ---subtitulos--- //
 
 @mixin subtitulo(){
-    padding: 30px;
+    padding: 20px;
     margin-bottom: 30px;
     font-size: 35px;
     text-transform: capitalize;
 	text-align: center;
+	text-decoration: underline;
 }
-
+a{
+	color: black;
+}
 $etiquetasSubt: subtitulo__index, subtitulo__qs, subtitulo__vivirEn, subtitulo__viajes, subtitulo__contacto;
 
 @each $subtitulo__x in $etiquetasSubt {
@@ -19,8 +26,8 @@ $etiquetasSubt: subtitulo__index, subtitulo__qs, subtitulo__vivirEn, subtitulo__
 	}
 }
 
-.footer--color{
-	background-color: #74c69d;
+.viajes--color{
+	background-color: lightgrey;
 }
 
 .sponsors--color{
@@ -62,4 +69,129 @@ h4{
 
 .container{ 
 	margin-bottom: 50px;
+}
+
+// index slider
+.carousel-contenedor{
+	width: 100%;
+	height: 150px;
+}
+#appSlider{
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	height: 70%;
+	margin-bottom: 20px;
+
+	img{
+		padding: 0;
+		width: 100px;
+		height: 100px;
+	}
+}
+
+// footer
+.footer--color{
+	background-color: $colorFooter;
+}
+footer{
+	height: auto;
+	width: 100%;
+	font-family: $letraFooter;
+	padding-top: 40px;
+	color: #fff;
+}
+.footer-contenedor{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+		h3{
+			font-family: 'Bebas Neue';
+			color: $sponsorsBg;
+			font-size: 1.8rem;
+			font-weight: 400;
+			text-transform: uppercase;
+			line-height: 3rem;
+		}
+		p{
+			max-width: 500px;
+			margin: 10px auto;
+			line-height: 28px;
+			font-size: 14px;
+		}
+}
+.footer__redes{
+	list-style: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 1rem 0 3rem 0;
+		li{
+			width: 50px;
+			height: 50px;
+			margin: 10px;
+			a{
+				display: block;
+                padding: 5px;
+                background: black;
+                color: white;
+                line-height: 40px;
+                font-size: 18px;
+                box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, .2);
+                border-radius: 50%;
+			}
+			a:hover i{
+					color: $sponsorsBg;
+				}
+		}
+}
+.footer-bottom{
+	background: $colorFooterBottom;
+	width: 100%;
+	padding: 20px 0;
+	text-align: center;
+		p{
+			font-size: 14px;
+			word-spacing: 2px;
+			text-transform: capitalize;
+		}
+
+		span{
+			text-transform: uppercase;
+			opacity: .7;
+			font-weight: 200;
+		}
+}
+
+
+// ----- Media screen celular carousel index principal
+@media (max-width: 576px){
+	#carousel{
+		img{
+			height: 500px;
+		}
+	}
+}
+// ----- Media screen celular carousel index sponsors
+@media (max-width: 768px){
+	.carousel-contenedor{
+		width: 100%;
+		height: 150px;
+	}
+	#appSlider{
+		display: flex;
+		flex-direction: row;
+		width: 100%;
+		height: 70%;
+		margin-bottom: 20px;
+		img{
+			text-align: center;
+			padding: 0;
+			width: 25%;
+			height: 50%;
+		}
+	}
+
 }
