--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -34,6 +34,7 @@
             filter: blur(2px);  
         } 
         ul li a:hover{
+            border-radius: 50%;
             transform: translateY(-3px) scale(1.05);
             box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, .4);
             filter: none;
