--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,28 @@ footer {
     font-weight: 200; }
 
 @media (max-width: 576px) {
+  .footer__redes {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0; }
+    .footer__redes li {
+      width: 50px;
+      height: 50px;
+      margin: 10px; }
+      .footer__redes li a {
+        display: block;
+        padding: 5px;
+        background: black;
+        color: white;
+        line-height: 40px;
+        font-size: 18px;
+        box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.2);
+        border-radius: 50%; }
+      .footer__redes li a:hover i {
+        color: #2a9d8f; }
   #carousel img {
     height: 500px; } }
 
