--- a/scss/_areas.scss
+++ b/scss/_areas.scss
@@ -160,6 +160,33 @@ footer{
 
 // ----- Media screen celular carousel index principal
 @media (max-width: 576px){
+	.footer__redes{
+	list-style: none;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	margin: 1rem 0 3rem 0;
+		li{
+			width: 50px;
+			height: 50px;
+			margin: 10px;
+			a{
+				display: block;
+                padding: 5px;
+                background: black;
+                color: white;
+                line-height: 40px;
+                font-size: 18px;
+                box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, .2);
+                border-radius: 50%;
+			}
+			a:hover i{
+					color: $sponsorsBg;
+				}
+		}
+	}
+
 	#carousel{
 		img{
 			height: 500px;
